terraria-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: terraria
  labels:
    app: terraria-server
