terraria-server/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: terraria-server
  namespace: terraria
  labels:
    app: terraria-server
spec:
  serviceName: terraria-server
  replicas: 1
  selector:
    matchLabels:
      app: terraria-server
  template:
    metadata:
      labels:
        app: terraria-server
    spec:
      containers:
        - name: terraria
          image: docker.io/library/terraria-tshock:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 7777
              name: game
              protocol: TCP
            - containerPort: 7878
              name: restapi
              protocol: TCP
            - containerPort: 7879
              name: plugin-cmd
              protocol: TCP
          volumeMounts:
            - name: terraria-world
              mountPath: /root/.local/share/Terraria/Worlds
            - name: terraria-config
              mountPath: /config
            - name: terraria-config-template
              mountPath: /config-template
              readOnly: true
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          readinessProbe:
            tcpSocket:
              port: 7878
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 7878
            initialDelaySeconds: 1800
            periodSeconds: 30
      volumes:
        - name: terraria-world
          persistentVolumeClaim:
            claimName: terraria-world-pvc
        - name: terraria-config
          emptyDir: {}
        - name: terraria-config-template
          configMap:
            name: terraria-config-json
