terraria-server/remote-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  namespace: homepage
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: gaming.andalusiaone.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homepage
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: terraria-agent-ingress
  namespace: terraria
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: gaming.andalusiaone.com
    http:
      paths:
      - path: /terraria-agent(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: terraria-agent
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: investigation-team-frontend-ingress
  namespace: investigation-team-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: gaming.andalusiaone.com
    http:
      paths:
      - path: /it
        pathType: Prefix
        backend:
          service:
            name: investigation-team-frontend-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supermarket-frontend-ingress
  namespace: supermarket
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: gaming.andalusiaone.com
    http:
      paths:
      - path: /supermarket
        pathType: Prefix
        backend:
          service:
            name: supermarket-frontend
            port:
              number: 80
